@@ -281,6 +281,13 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MP236   (EXPERIMENTAL)(*2)
        Canon PIXMA MP237   (EXPERIMENTAL)(*2)
 
+       Canon MP280 series  (EXPERIMENTAL)
+       Canon PIXMA MP280   (EXPERIMENTAL)(*2)
+       Canon PIXUS MP280   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP282   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP287   (EXPERIMENTAL)(*2)
+       Canon PIXMA MP288   (EXPERIMENTAL)(*2)
+
        Canon MG2100 series (EXPERIMENTAL)(*1)
        Canon PIXMA MG2110  (EXPERIMENTAL)(*2)
        Canon PIXMA MG2120  (EXPERIMENTAL)(*2)
